# wow-core-rs

./: Cargo.toml
apps/authserver/: Cargo.toml
apps/authserver/src/: errors.rs  main.rs  protocol_version.rs
apps/authserver/src/session/: mod.rs  session.rs
apps/charserver/: Cargo.toml
apps/chatserver/: Cargo.toml
apps/gatewayserver/: Cargo.toml
apps/groupserver/: Cargo.toml
apps/guildserver/: Cargo.toml
apps/mailserver/: Cargo.toml
apps/worldserver/: Cargo.toml
